--- a/src/assets/css/participantes.css
+++ b/src/assets/css/participantes.css
@@ -2,17 +2,17 @@
   width: 100%;
   height: 200px;
   padding: 0;
+  border: 1px solid #e0e0e0;
 }
 .content table thead {
   background-color: #71c155;
   color: white;
 }
-.content table tbody {
-  background-color: gray;
+.content table tbody tr:nth-child(odd) {
+  background-color: #f2f2f2;
 }
 .content table tbody td {
   padding: 0;
-  background-color: #e6e6e6;
 }
 .content .add {
   display: flex;
@@ -29,6 +29,10 @@
 }
 .content .add button:hover {
   background-color: #55a739;
+}
+.content .add button:focus {
+  outline: none;
+  outline-width: 0;
 }
 
 /*# sourceMappingURL=participantes.css.map */
