--- a/src/assets/sass/participantes.scss
+++ b/src/assets/sass/participantes.scss
@@ -4,16 +4,18 @@ $primary-back-color: #71c155;
         width  : 100%;
         height : 200px;
         padding: 0;
+        border: 1px solid #e0e0e0;
         thead {
             background-color: $primary-back-color;
             color           : white;
         }
         tbody {
-            background-color: gray;
+            tr:nth-child(odd) {
+                background-color: #f2f2f2;
+            }
         }
         tbody td {
             padding         : 0;
-            background-color: #e6e6e6;
         }
     }
     .add {
@@ -29,6 +31,10 @@ $primary-back-color: #71c155;
             border-radius: 5px;
             &:hover {
                 background-color: #55a739;
+            }
+            &:focus {
+                outline: none;
+                outline-width: 0;
             }
         }
     }
