--- a/src/assets/css/adicionarParticipantes.css
+++ b/src/assets/css/adicionarParticipantes.css
@@ -1,29 +1,34 @@
-.formulario {
+#modal {
+  display: none;
+  opacity: 0;
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   background-color: #00000066;
+}
+#modal .formulario {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
 }
-.formulario div {
+#modal .formulario div {
   background-color: white;
   width: 60%;
   border-radius: 5px;
 }
-.formulario div header {
+#modal .formulario div header {
   padding: 20px;
   border-bottom: 1px solid #ebebeb;
   display: flex;
   justify-content: space-between;
 }
-.formulario div form {
+#modal .formulario div form {
   padding: 20px;
 }
-.formulario div form input {
+#modal .formulario div form input {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -32,23 +37,23 @@
   border-radius: 4px;
   box-sizing: border-box;
 }
-.formulario div form input:focus {
+#modal .formulario div form input:focus {
   outline: 1px solid #4fdb21;
 }
-.formulario div form div {
+#modal .formulario div form div {
   display: flex;
   flex-direction: column;
   width: 100%;
   margin-bottom: 10px;
 }
-.formulario div form div label {
+#modal .formulario div form div label {
   text-align: left;
 }
-.formulario div form footer {
+#modal .formulario div form footer {
   display: flex;
   justify-content: flex-end;
 }
-.formulario div form footer button {
+#modal .formulario div form footer button {
   margin-left: 10px;
   cursor: pointer;
   background-color: #71c155;
@@ -57,10 +62,10 @@
   padding: 10px;
   border-radius: 5px;
 }
-.formulario div form footer button:hover {
+#modal .formulario div form footer button:hover {
   background-color: #55a739;
 }
-.formulario div form footer button:focus {
+#modal .formulario div form footer button:focus {
   outline: none;
   outline-width: 0;
 }
