--- a/src/assets/css/chave.css
+++ b/src/assets/css/chave.css
@@ -1,82 +1,98 @@
-.conteudo {
+.torneio .back {
+  padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+.torneio .back button {
+  background-color: #71c155;
+  border: 0;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.torneio .back button a {
+  text-decoration: none;
+  color: white;
+}
+.torneio .conteudo {
   height: 300px;
   display: grid;
   grid-template-rows: 50% 50%;
   grid-template-columns: 33% 33% 33%;
 }
-.conteudo .player1 {
+.torneio .conteudo .player1 {
   height: 50%;
   display: grid;
   grid-template-rows: 2em calc(100% - 1em);
 }
-.conteudo .player1 div:nth-child(1) {
+.torneio .conteudo .player1 div:nth-child(1) {
   border-bottom: 2px solid black;
 }
-.conteudo .player1 div:nth-child(2) {
+.torneio .conteudo .player1 div:nth-child(2) {
   border-right: 2px solid black;
 }
-.conteudo .player2 {
+.torneio .conteudo .player2 {
   height: 50%;
   display: grid;
   border-right: 2px solid black;
   grid-template-rows: calc(100% - 2em) 2em;
 }
-.conteudo .player2 div:nth-child(2) {
+.torneio .conteudo .player2 div:nth-child(2) {
   border-bottom: 2px solid black;
 }
-.conteudo .bloco1 {
+.torneio .conteudo .bloco1 {
   grid-row: 1;
   margin-bottom: 25px;
 }
-.conteudo .bloco2 {
+.torneio .conteudo .bloco2 {
   grid-row: 2;
   margin-top: 25px;
 }
-.conteudo .bloco3 {
+.torneio .conteudo .bloco3 {
   grid-row: 1/2;
   grid-column: 2/2;
   display: grid;
   grid-template-rows: 50% 50%;
 }
-.conteudo .bloco3 div:nth-child(1) {
+.torneio .conteudo .bloco3 div:nth-child(1) {
   display: flex;
   align-items: flex-end;
   justify-content: center;
   border-bottom: 2px solid black;
 }
-.conteudo .bloco3 div:nth-child(2) {
+.torneio .conteudo .bloco3 div:nth-child(2) {
   border-right: 2px solid black;
 }
-.conteudo .bloco4 {
+.torneio .conteudo .bloco4 {
   grid-row: 2/2;
   grid-column: 2/2;
   display: grid;
   grid-template-rows: 60% 40%;
 }
-.conteudo .bloco4 div:nth-child(1) {
+.torneio .conteudo .bloco4 div:nth-child(1) {
   border-right: 2px solid black;
 }
-.conteudo .bloco4 div:nth-child(2) {
+.torneio .conteudo .bloco4 div:nth-child(2) {
   border-top: 2px solid black;
 }
-.conteudo .bloco5 {
+.torneio .conteudo .bloco5 {
   grid-row: 1/3;
   display: grid;
   grid-template-columns: 50% 50%;
 }
-.conteudo .bloco5 div:nth-child(1) {
+.torneio .conteudo .bloco5 div:nth-child(1) {
   display: grid;
   grid-template-rows: 50% 50%;
 }
-.conteudo .bloco5 div:nth-child(1) div:nth-child(1) {
+.torneio .conteudo .bloco5 div:nth-child(1) div:nth-child(1) {
   border-bottom: 2px solid black;
 }
-.conteudo .bloco5 div:nth-child(2) {
+.torneio .conteudo .bloco5 div:nth-child(2) {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.conteudo .bloco5 div:nth-child(2) img {
+.torneio .conteudo .bloco5 div:nth-child(2) img {
   width: 50%;
 }
 
