--- a/src/assets/sass/chave.scss
+++ b/src/assets/sass/chave.scss
@@ -1,83 +1,102 @@
 $border: 2px solid black;
-.conteudo {
-    height: 300px;
-    display: grid;
-    grid-template-rows: 50% 50%;
-    grid-template-columns: 33% 33% 33%;
-    
-    .player1 {
-        height: 50%;
-        display: grid;
-        grid-template-rows: 2em calc(100% - 1em);
-        div:nth-child(1) {
-            border-bottom: $border;
-        }
-        div:nth-child(2) {
-            border-right: $border;
-        }
-    }
-    .player2 {
-        height: 50%;
-        display: grid;
-        border-right: $border;
-        grid-template-rows: calc(100% - 2em) 2em;
-        div:nth-child(2) {
-            border-bottom: $border;
+$primary-back-color: #71c155;
+.torneio {
+    .back {
+        padding: 10px;
+        display: flex;
+        justify-content: flex-end;
+        button {
+            background-color: $primary-back-color;
+            border: 0;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            a {
+                text-decoration: none;
+                color: white;
+            }
         }
     }
-
-    .bloco1 {
-        grid-row: 1;
-        margin-bottom: 25px;
-    }
-    .bloco2 {
-        grid-row: 2;
-        margin-top: 25px;
-    }
-    .bloco3 {
-        grid-row: 1 / 2;
-        grid-column: 2 / 2;
+    .conteudo {
+        height: 300px;
         display: grid;
         grid-template-rows: 50% 50%;
-        div:nth-child(1) {
-            display: flex;
-            align-items: flex-end;
-            justify-content: center;
-            border-bottom: $border;
-        }
-        div:nth-child(2) {
-            border-right: $border;
-        }
-    }
-    .bloco4 {
-        grid-row: 2 / 2;
-        grid-column: 2 / 2;
-        display: grid;
-        grid-template-rows: 60% 40%;
-        div:nth-child(1) {
-            border-right: $border;
-        }
-        div:nth-child(2) {
-            border-top: $border;
-        }
-    }
-    .bloco5 {
-        grid-row: 1 / 3;
-        display: grid;
-        grid-template-columns: 50% 50%;
-        div:nth-child(1) {
+        grid-template-columns: 33% 33% 33%;
+        
+        .player1 {
+            height: 50%;
             display: grid;
-            grid-template-rows: 50% 50%;
+            grid-template-rows: 2em calc(100% - 1em);
             div:nth-child(1) {
                 border-bottom: $border;
             }
+            div:nth-child(2) {
+                border-right: $border;
+            }
         }
-        div:nth-child(2) {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            img {
-                width: 50%;
+        .player2 {
+            height: 50%;
+            display: grid;
+            border-right: $border;
+            grid-template-rows: calc(100% - 2em) 2em;
+            div:nth-child(2) {
+                border-bottom: $border;
+            }
+        }
+    
+        .bloco1 {
+            grid-row: 1;
+            margin-bottom: 25px;
+        }
+        .bloco2 {
+            grid-row: 2;
+            margin-top: 25px;
+        }
+        .bloco3 {
+            grid-row: 1 / 2;
+            grid-column: 2 / 2;
+            display: grid;
+            grid-template-rows: 50% 50%;
+            div:nth-child(1) {
+                display: flex;
+                align-items: flex-end;
+                justify-content: center;
+                border-bottom: $border;
+            }
+            div:nth-child(2) {
+                border-right: $border;
+            }
+        }
+        .bloco4 {
+            grid-row: 2 / 2;
+            grid-column: 2 / 2;
+            display: grid;
+            grid-template-rows: 60% 40%;
+            div:nth-child(1) {
+                border-right: $border;
+            }
+            div:nth-child(2) {
+                border-top: $border;
+            }
+        }
+        .bloco5 {
+            grid-row: 1 / 3;
+            display: grid;
+            grid-template-columns: 50% 50%;
+            div:nth-child(1) {
+                display: grid;
+                grid-template-rows: 50% 50%;
+                div:nth-child(1) {
+                    border-bottom: $border;
+                }
+            }
+            div:nth-child(2) {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                img {
+                    width: 50%;
+                }
             }
         }
     }
