--- a/src/assets/css/adicionarParticipantes.css
+++ b/src/assets/css/adicionarParticipantes.css
@@ -19,6 +19,18 @@
   width: 60%;
   border-radius: 5px;
 }
+#modal .formulario div #msgError {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  display: none;
+  padding-bottom: 15px;
+}
+#modal .formulario div #msgError span {
+  color: #71c155;
+  opacity: 1;
+  margin-right: 20px;
+}
 #modal .formulario div header {
   padding: 20px;
   border-bottom: 1px solid #ebebeb;
