--- a/src/assets/css/participantes.css
+++ b/src/assets/css/participantes.css
@@ -44,4 +44,11 @@
   outline-width: 0;
 }
 
+@media only screen and (max-width: 900px) {
+  .content {
+    padding-bottom: 20px;
+    overflow-x: scroll;
+  }
+}
+
 /*# sourceMappingURL=participantes.css.map */
