--- a/src/assets/sass/chave.scss
+++ b/src/assets/sass/chave.scss
@@ -56,7 +56,7 @@ $primary-back-color: #71c155;
             grid-row: 1 / 2;
             grid-column: 2 / 2;
             display: grid;
-            grid-template-rows: 50% 50%;
+            grid-template-rows: 52% 48%;
             div:nth-child(1) {
                 display: flex;
                 align-items: flex-end;
@@ -71,7 +71,7 @@ $primary-back-color: #71c155;
             grid-row: 2 / 2;
             grid-column: 2 / 2;
             display: grid;
-            grid-template-rows: 60% 40%;
+            grid-template-rows: 70% 40%;
             div:nth-child(1) {
                 border-right: $border;
             }
@@ -85,7 +85,7 @@ $primary-back-color: #71c155;
             grid-template-columns: 50% 50%;
             div:nth-child(1) {
                 display: grid;
-                grid-template-rows: 50% 50%;
+                grid-template-rows: 55% 45%;
                 div:nth-child(1) {
                     border-bottom: $border;
                 }
@@ -96,6 +96,22 @@ $primary-back-color: #71c155;
                 justify-content: center;
                 img {
                     width: 50%;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and(max-width: 900px) {
+    .conteudo {
+        padding-bottom: 20px;
+        overflow-x: scroll;
+        grid-template-columns: 31% 40% !important;
+        grid-template-rows: 50% !important;
+        .bloco5 {
+            div:nth-child(2) {
+                img {
+                    width: 100% !important;
                 }
             }
         }
