--- a/src/assets/sass/participantes.scss
+++ b/src/assets/sass/participantes.scss
@@ -50,3 +50,9 @@ $primary-back-color: #71c155;
         }
     }
 }
+@media only screen and(max-width: 900px) {
+    .content {
+        padding-bottom: 20px;
+        overflow-x: scroll;
+    }
+}
